Fix total product not showing in the admin dashboard and re-arrange card UI.

--- a/project/assets/css/product.css
+++ b/project/assets/css/product.css
@@ -1,5 +1,7 @@
 .product-content {
     margin-top: 7rem;
+    margin-bottom: 7rem;
+    min-height: calc(100vh - 14rem);
 }
 .btn-milk-white {
     background-color: var(--theme-color-milk-white);
